Changed thumbnail caption's default style and preference now that border alignment issue fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,58 +1,62 @@
 /* workspace caption container */
 .workspacestodock-workspace-caption {
-    background-color: rgba(55,55,55,1.0);
+    background-color: rgba(0,0,0,0.4);
+    border: 1px solid rgba(128, 128, 128, 0.4);
     border-radius: 0px 0px 2px 2px;
 }
 
 /* caption workspace number */
 .workspacestodock-caption-number {
     color: rgba(0,0,0,1.0);
-    background-color: rgba(255,255,255,0.9);
+    background-color: rgba(255,255,255,0.7);
     font-size: 12px;
     font-weight: bold;
     text-align: center;
-    padding: 0px 8px;
+    padding: 0px 6px;
 }
 
 /* caption workspace name */
 .workspacestodock-caption-name {
-    max-width: 80px;
     color: rgba(255,255,255,1.0);
     font-size: 10px;
     font-weight: bold;
     text-align: center;
-    padding: 2px 8px 0px 8px;
+    padding: 1px 6px 0px 6px;
 }
 
 /* caption workspace windowcount */
 .workspacestodock-caption-windowcount {
     min-width: 10px;
     color: rgba(255,255,255,1.0);
-    background-color: rgba(155,155,155,1.0);
+    background-color: rgba(100,100,100,0.4);
     font-size: 12px;
     font-weight: bold;
     text-align: center;
-    padding: 0px 8px;
+    padding: 0px 4px;
+    border-radius: 8px;
 }
 
 /* caption workspace windowcount image*/
 .workspacestodock-caption-windowcount-image {
-    width: 76px;
 }
 
 /* The classes below are used in conjunction with the above workspacestodock-caption-windowcount-image 
  * They provide background images that corespond with the window count */
 .workspacestodock-caption-windowcount-image-1 {
     background-image: url('h-one.svg');
+    width: 33px;
 }
 .workspacestodock-caption-windowcount-image-2 {
     background-image: url('h-two.svg');
+    width: 48px;
 }
 .workspacestodock-caption-windowcount-image-3 {
     background-image: url('h-three.svg');
+    width: 63px;
 }
 .workspacestodock-caption-windowcount-image-4 {
     background-image: url('h-four.svg');
+    width: 76px;
 }
 
 /* caption spacer-filler */
@@ -60,7 +64,7 @@
 }
 
 /* The classes below are used in conjuction with the above classes
- * They provide additional theming of the current workspace caption */
+ * They provide additional theming for the current workspace caption */
 .workspacestodock-workspace-caption-current {
 }
 .workspacestodock-caption-number-current {
